# tiles-screeners

./: .env.example  README.md  config.example.yaml  pyproject.toml
src/wallwatch/api/: client.py
src/wallwatch/app/: commands.py  config.py  main.py  market_data_manager.py  runtime_state.py  telegram.py  telegram_bot.py  telegram_client.py  telegram_polling.py
src/wallwatch/detector/: wall_detector.py
src/wallwatch/notify/: notifier.py  telegram_notifier.py
src/wallwatch/state/: models.py
tests/: test_cli.py  test_config.py  test_datetime_helpers.py  test_env_settings.py  test_grpc_channel.py  test_grpc_endpoint.py  test_market_data_client.py  test_market_data_manager.py  test_orderbook_dump.py  test_resolver.py  test_telegram_bot.py  test_telegram_commands.py  test_telegram_notifier.py  test_wall_detector.py
